# bcu

./: .gitignore  Board_Control_Utilities.vcxproj  Board_Control_Utilities.vcxproj.filters  CMakeLists.txt  README.md  bcu.c  bcu_ftdi_eeprom.c  bcu_parser.c  bcu_yaml.c  board.c  chip.c  port.c
.github/workflows/: main.yml
apps/cli/: bcu.c  main.c
include/: bcu_yaml.h
libbcu/: libbcu.h  libbcu_silent.h
libbcu/src/: bcu_ftdi_eeprom.c  bcu_parser.c  bcu_yaml.c  board.c  chip.c  libbcu_log.c  port.c
msvs/: Board_Control_Utilities.sln  Board_Control_Utilities.vcxproj  Board_Control_Utilities.vcxproj.filters
